<resources>
    <string name="user_data_menu_info">Info &amp; terms</string>
    <string name="toast_api_error" formatted="false">Error: %s</string>
    <string name="error_something_went_wrong">Something went wrong.</string>
    <string name="toolbar_next_button_label">Next</string>
    <string name="toolbar_confirm_button_label">Confirm</string>
    <string name="toolbar_activate_card_button_label">Activate card</string>
    <string name="loan_amount_label">How much do you need?</string>
    <string name="loan_amount_purpose_hint">Select a loan purpose&#8230;</string>
    <string name="loan_amount_purpose_error">Please select a valid loan purpose.</string>
    <string name="loan_amount_menu_update_profile">Update profile</string>
    <string name="personal_info_label">Nice to meet you :)</string>
    <string name="personal_info_first_name_hint">First name</string>
    <string name="personal_info_first_name_error">Please enter your first name.</string>
    <string name="personal_info_last_name_hint">Last name</string>
    <string name="personal_info_last_name_error">Please enter your last name.</string>
    <string name="personal_info_email_hint">Email</string>
    <string name="personal_info_email_error">Please enter a valid email address.</string>
    <string name="personal_info_email_not_available">I don\'t have an email</string>
    <string name="phone_title">Phone number</string>
    <string name="phone_hint">Phone number</string>
    <string name="phone_label">To identify you, we need your phone number</string>
    <string name="phone_label_sms">We\'ll send a one-time SMS to verify your phone number. Carrier SMS fees may apply.</string>
    <string name="phone_error">Invalid phone number</string>
    <string name="email_title">Account details</string>
    <string name="email_error">Invalid email</string>
    <string name="email_label">Enter your email address</string>
    <string name="email_hint">emailaddress@example.com</string>
    <string name="birthdate_title">Security Check</string>
    <string name="birthdate_hint">When is your birthday?</string>
    <string name="birthdate_label_month">Choose month</string>
    <string name="birthdate_hint_month">month</string>
    <string name="birthdate_hint_day">day</string>
    <string name="birthdate_hint_year">year</string>
    <string name="birthdate_label">Enter your birthdate below to verify your account.</string>
    <string name="birthdate_error">You must be 18 years or older.</string>
    <string name="birthdate_verification_error">Error: the birthdate is incorrect!</string>
    <string name="phone_verification_label">Verify phone number</string>
    <string name="phone_verification_resent">A new code has been sent to your phone</string>
    <string name="phone_verification_code_hint">Enter the code that was sent to your phone</string>
    <string name="verification_code_hint">Enter the code that was sent to</string>
    <string name="verification_button_resend"><u>Re-send code</u></string>
    <string name="verification_error">Error: the code is incorrect!</string>
    <string name="email_verification_title">Security check</string>
    <string name="email_verification_code_hint">Enter the code that was sent to your email</string>
    <string name="email_verification_resent">A new code has been sent to your email</string>
    <string name="address_title">Contact information</string>
    <string name="address_label">Where do you live?</string>
    <string name="address_error">Invalid address</string>
    <string name="address_autocomplete_hint">your current address</string>
    <string name="address_housing_type_header">Residence</string>
    <string name="address_housing_type_hint">Select a housing type&#8230;</string>
    <string name="address_housing_type_error">Please select a valid housing type.</string>
    <string name="geocoding_google_maps_api_key">AIzaSyBQuKFxmTO8gmxBwnXZlgG3TJY50KpbS-0</string>
    <string name="geocoding_google_maps_api_url">https://maps.googleapis.com/maps/api/place/details/json</string>
    <string name="google_places_autocomplete_api_url">https://maps.googleapis.com/maps/api/place/autocomplete/json</string>
    <string name="google_places_autocomplete_api_key">AIzaSyAj21pmvNCyCzFqYq2D3nL4FwYPCzpHwRA</string>
    <string name="apartment_title">Contact information</string>
    <string name="address_apartment_number_hint">apartment, unit, floor, etc.</string>
    <string name="time_at_address_label">Address</string>
    <string name="time_at_address_hint">How long have you been at this address?</string>
    <string name="time_at_address_error">Please select a time range.</string>
    <string name="annual_income_label">What\'s your annual pretax income?</string>
    <string name="annual_income_income_type_header">Income type</string>
    <string name="annual_income_income_type_hint">Select an income type&#8230;</string>
    <string name="annual_income_income_type_error">Please select a valid income type.</string>
    <string name="annual_income_salary_frequency_header">Salary frequency</string>
    <string name="annual_income_salary_frequency_hint">Select a salary frequency&#8230;</string>
    <string name="annual_income_salary_frequency_error">Please select a valid salary frequency.</string>
    <string name="monthly_income_label">What\'s your monthly net income?</string>
    <string name="credit_score_label">What\'s your credit score?</string>
    <string name="credit_score_error">Please select a credit score.</string>
    <string name="payday_loan_label">Additional Info</string>
    <string name="payday_loan_yes">Yes</string>
    <string name="payday_loan_no">No</string>
    <string name="payday_loan_hint">Have you used a payday loan in the past six months?</string>
    <string name="payday_loan_error">Please choose an answer.</string>
    <string name="armed_forces_label">Additional Info</string>
    <string name="armed_forces_yes">Yes</string>
    <string name="armed_forces_no">No</string>
    <string name="armed_forces_hint">Are you, your spouse, or your head of household an active member of the armed forces?</string>
    <string name="armed_forces_error">Please choose an answer.</string>
    <string name="id_verification_citizenship_label">Citizenship</string>
    <string name="id_verification_document_type_label">Type of document</string>
    <string name="id_verification_title_get_offers">Ready for your offers?</string>
    <string name="id_verification_next_button_get_offers">GET OFFERS</string>
    <string name="id_verification_title_issue_card">Ready for your card?</string>
    <string name="id_verification_next_button_issue_card">GET CARD</string>
    <string name="id_verification_update_profile_title">Update Profile</string>
    <string name="id_verification_update_profile_button">UPDATE PROFILE</string>
    <string name="id_verification_birthday_error">You must be 18 years or older.</string>
    <string name="id_verification_document_number_label">Document number</string>
    <string name="id_verification_document_number_hint">the document number</string>
    <string name="id_verification_document_number_error">Please enter a valid number.</string>
    <string name="id_verification_disclaimer">Your information is private and secure.</string>
    <string name="id_verification_ssn_itin_not_available">I don\'t have an SSN/ITIN</string>
    <string name="date_of_birth_label">Date of birth</string>
    <string name="id_document_label">ID document</string>
    <string name="offers_list_label">Loan offers</string>
    <string name="offers_list_empty_text">No offers found.</string>
    <string name="offers_list_empty_button">Update loan request</string>
    <string name="offers_list_menu_update_profile">Update profile</string>
    <string name="offers_list_menu_refresh">Refresh offers</string>
    <string name="offers_list_summary_interest_rate" formatted="false">Interest rate: %.2f%%</string>
    <string name="offers_list_summary_loan_amount" formatted="false">Amount financed: %s</string>
    <string name="offers_list_summary_monthly_payment" formatted="false">Monthly payment: %s</string>
    <string name="offers_list_summary_button_apply">APPLY NOW</string>
    <string name="offers_list_summary_button_more_info">MORE INFO</string>
    <string name="offers_list_dialog_redirect_title">Re-direct</string>
    <string name="offers_list_dialog_redirect_message" formatted="false">You will be re-directed to the %s website to complete your application.</string>
    <string name="offers_list_dialog_disclaimer_title">Disclaimer</string>
    <string name="offers_list_terms_url">https://ledge.me/terms</string>
    <string name="loan_application_label">My loan</string>
    <string name="loan_application_explanation_error">Something went wrong.</string>
    <string name="loan_application_button_retry">RETRY</string>
    <string name="loan_application_button_offers">Get offers</string>
    <string name="loan_application_button_documents_pending">ADD DOCUMENTS</string>
    <string name="loan_application_button_pre_approved_loan">CONFIRM LOAN</string>
    <string name="loan_application_button_finish_external">ADD INFO</string>
    <string name="loan_application_summary_loan_purpose">Loan Purpose</string>
    <string name="loan_application_summary_first_name">First Name</string>
    <string name="loan_application_summary_last_name">Last Name</string>
    <string name="loan_application_summary_email">Email</string>
    <string name="loan_application_summary_phone">Phone</string>
    <string name="loan_application_summary_address">Address</string>
    <string name="loan_application_summary_apt_unit">Apt/Unit</string>
    <string name="loan_application_summary_city">City</string>
    <string name="loan_application_summary_state">State</string>
    <string name="loan_application_summary_zip_code">ZIP Code</string>
    <string name="loan_application_summary_housing_status">Housing Status</string>
    <string name="loan_application_summary_annual_pretax_income">Annual Pretax Income</string>
    <string name="loan_application_summary_income_type">Income Type</string>
    <string name="loan_application_summary_salary_frequency">Salary Frequency</string>
    <string name="loan_application_details_duration">Loan term: %s</string>
    <string name="loan_application_details_disclaimer">Sed pellentesque diam a ligula molestie ultrices. Donec interdum convallis dui, non fermentum sapien lacinia at. Donec congue velit ut rhoncus sodales.</string>
    <string name="add_custodian_coinbase_account">Coinbase Connect</string>
    <string name="add_custodian_coinbase_account_description">Connect with your Coinbase account to authorize Shift Card.</string>
    <string name="add_custodian_coinbase_account_button_submit">CONNECT TO COINBASE</string>
    <string name="card_welcome_title">Your Card is ready to run!</string>
    <string name="card_welcome_subtitle">Your Physical Card is on the way! In the mean time, you can start enjoying your virtual card.</string>
    <string name="card_welcome_button">ACTIVATE MY CARD</string>
    <string name="get_pin_title">Congratulations!</string>
    <string name="get_pin_subtitle">Your physical Shift Card has been enabled. We\'ve set a random PIN code for your card.</string>
    <string name="get_pin_button">GET MY PIN</string>
    <string name="issue_card_error_header">Error</string>
    <string name="issue_card_error_body">There was an error while issuing your card</string>
    <string name="issue_card_error_button">TRY AGAIN</string>
    <string name="invalid_funding_source_title">Invalid funding source</string>
    <string name="invalid_funding_source_body">Your current funding source is not valid. Please select or add a different one!</string>
    <string name="invalid_funding_source_accept">Select now</string>
    <string name="invalid_funding_source_cancel">Cancel</string>
</resources>