<?xml version="1.0" encoding="utf-8"?>
<com.shift.link.sdk.ui.views.userdata.ArmedForcesView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/include_llsdk_toolbar" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/llsdk_user_data_entry_container"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tv_armed_forces_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/armed_forces_hint" />

        <RadioGroup
                android:id="@+id/rg_armed_forces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <RadioButton
                    style="?attr/llsdk_creditScore_radioButtonStyle"
                    android:id="@+id/rb_yes"
                    android:text="@string/armed_forces_yes" />

            <RadioButton
                    style="?attr/llsdk_creditScore_radioButtonStyle"
                    android:id="@+id/rb_no"
                    android:text="@string/armed_forces_no" />
        </RadioGroup>

        <TextView
                android:id="@+id/tv_armed_forces_error"
                style="@style/llsdk_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/armed_forces_error" />

    </LinearLayout>

    <include layout="@layout/include_progress_bar" />

</com.shift.link.sdk.ui.views.userdata.ArmedForcesView>
