<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_invalid_funding_source_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_banner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:text="@string/invalid_funding_source_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_banner_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_banner_title"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/invalid_funding_source_body"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_banner_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_banner_body"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/invalid_funding_source_accept" />

    <TextView
        android:id="@+id/tv_banner_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_banner_body"
        android:layout_toLeftOf="@+id/tv_banner_accept"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/invalid_funding_source_cancel" />
</RelativeLayout>