<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.card.GetPinView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_llsdk_toolbar" />

    <TextView
        android:id="@+id/tv_get_pin_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="44dp"
        android:layout_above="@+id/tv_get_pin_subtitle"
        android:textSize="28sp"
        android:text="@string/get_pin_title" />

    <TextView
        android:id="@+id/tv_get_pin_subtitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:layout_above="@+id/tv_get_pin_bttn"
        android:textSize="16sp"
        android:text="@string/get_pin_subtitle" />

    <TextView
        android:id="@+id/tv_get_pin_bttn"
        style="?attr/llsdk_bigButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:text="@string/get_pin_button" />
</com.shiftpayments.link.sdk.ui.views.card.GetPinView>
