<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.loanapplication.LoanApplicationDetailsView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cv="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            cv:cardCornerRadius="4dp"
            cv:cardElevation="2dp">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@+id/rl_image_holder"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="?attr/llsdk_lenderLogoBackground">

                <ImageView
                        android:id="@+id/iv_lender_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp" />

                <TextView
                        android:id="@+id/tv_lender_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

            </RelativeLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_below="@+id/rl_image_holder">

                <TextView
                        android:id="@+id/tv_application_state"
                        style="?attr/llsdk_loanOfferSummary_headerStyle"
                        android:layout_marginBottom="8dp" />

                <TextView
                        android:id="@+id/tv_loan_interest_rate"
                        style="?attr/llsdk_loanOfferSummary_textStyle"
                        android:text="@string/offers_list_summary_interest_rate" />

                <TextView
                        android:id="@+id/tv_loan_amount"
                        style="?attr/llsdk_loanOfferSummary_textStyle"
                        android:text="@string/offers_list_summary_loan_amount" />

                <TextView
                        android:id="@+id/tv_payment"
                        style="?attr/llsdk_loanOfferSummary_textStyle"
                        android:text="@string/offers_list_summary_monthly_payment" />

                <TextView
                        android:id="@+id/tv_loan_duration"
                        style="?attr/llsdk_loanOfferSummary_textStyle"
                        android:text="@string/loan_application_details_duration" />

                <TextView
                        android:id="@+id/tv_bttn_action"
                        style="?attr/llsdk_bigButtonStyle"
                        android:layout_marginTop="16dp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/loan_application_details_disclaimer" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</com.shiftpayments.link.sdk.ui.views.loanapplication.LoanApplicationDetailsView>
