<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.userdata.PersonalInformationConfirmationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_llsdk_toolbar" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_toolbar_wrapper">

        <LinearLayout
                style="?attr/llsdk_dataContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_first_name_label"
                style="@style/llsdk_form_label"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_info_first_name_hint"/>

            <TextView
                android:id="@+id/tv_first_name"
                style="@style/llsdk_form_field"
                android:visibility="gone"
                android:singleLine="true"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_last_name_label"
                style="@style/llsdk_form_label"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_info_last_name_hint"/>

            <TextView
                android:id="@+id/tv_last_name"
                style="@style/llsdk_form_field"
                android:visibility="gone"
                android:singleLine="true"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email_label"
                style="@style/llsdk_form_label"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_info_email_hint"/>

            <TextView
                android:id="@+id/tv_email"
                style="@style/llsdk_form_field"
                android:visibility="gone"
                android:singleLine="true"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_address_label"
                style="@style/llsdk_form_label"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:text="@string/address_label"/>

            <TextView
                android:id="@+id/tv_address"
                style="@style/llsdk_form_field"
                android:visibility="gone"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_phone_label"
                style="@style/llsdk_form_label"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:text="@string/phone_title"/>

            <TextView
                android:id="@+id/tv_phone"
                style="@style/llsdk_form_field"
                android:visibility="gone"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </ScrollView>
</com.shiftpayments.link.sdk.ui.views.userdata.PersonalInformationConfirmationView>
