<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.card.CardWelcomeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shiftpayments.link.sdk.ui.activities.card.CardWelcomeActivity">

    <com.shiftpayments.link.sdk.ui.views.card.CreditCardView
        android:id="@+id/credit_card_view"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="78dp"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/tv_card_welcome_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="44dp"
        android:textSize="28sp"
        android:text="@string/card_welcome_title" />

    <TextView
        android:id="@+id/tv_card_welcome_subtitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:text="@string/card_welcome_subtitle" />

    <TextView
        android:id="@+id/tv_activate_card_bttn"
        style="?attr/llsdk_bigButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/card_welcome_button" />
</com.shiftpayments.link.sdk.ui.views.card.CardWelcomeView>
