<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.IssueCardErrorView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:text="@string/issue_card_error_body"/>

        <TextView
            android:id="@+id/tv_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_above="@+id/tv_body_text"
            android:textSize="22sp"
            android:text="@string/issue_card_error_header"/>

        <ImageView
            android:id="@+id/iv_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_header_text"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_margin="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_exclamation" />

        <TextView
            android:id="@+id/tv_try_again_bttn"
            android:layout_width="288dp"
            style="?attr/llsdk_bigButtonStyle"
            android:layout_below="@+id/tv_body_text"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/issue_card_error_button" />
    </RelativeLayout>
</com.shiftpayments.link.sdk.ui.views.IssueCardErrorView>