<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.userdata.IdentityVerificationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_llsdk_toolbar" />

    <include layout="@layout/include_progress_bar" />

    <!-- Dummy to get focus on start. -->
    <RelativeLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        style="?attr/llsdk_dataContainerStyle"
        android:scrollbarStyle="outsideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_birthdate_label"
                style="@style/llsdk_form_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/birthdate_hint" />

            <include
                android:id="@+id/birthdate_holder"
                android:layout_marginTop="16dp"
                layout="@layout/include_birthdate_field" />

            <TextView
                android:id="@+id/tv_document_number_label"
                style="@style/llsdk_form_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthdate_holder"
                android:layout_marginTop="16dp"
                android:text="@string/id_verification_document_number_label" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_document_number"
                style="?attr/llsdk_idVerification_inputWrapperStyle"
                android:layout_below="@+id/tv_document_number_label"
                android:theme="?attr/llsdk_idVerification_inputWrapperTheme">

                <EditText
                    android:id="@+id/et_social_security"
                    style="?attr/llsdk_idVerification_editTextStyle"
                    android:background="@android:color/transparent" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_ssn_itin_not_available_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_document_number"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/cb_ssn_itin_not_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_ssn_itin_not_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/id_verification_ssn_itin_not_available" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_next_bttn"
                style="?attr/llsdk_bigButtonStyle"
                android:layout_below="@+id/ll_ssn_itin_not_available_holder"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/id_verification_next_button_get_offers" />

            <TextView
                android:id="@+id/tv_security"
                style="?attr/llsdk_idVerification_disclaimerStyle"
                android:layout_below="@+id/tv_next_bttn"
                android:layout_centerHorizontal="true"
                android:text="@string/id_verification_disclaimer" />
        </RelativeLayout>
    </ScrollView>

</com.shiftpayments.link.sdk.ui.views.userdata.IdentityVerificationView>
