<?xml version="1.0" encoding="utf-8"?>
<com.shiftpayments.link.sdk.ui.views.custodianselector.AddCustodianListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<include layout="@layout/include_llsdk_toolbar" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_coinbase_logo"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tv_coinbase_header"
            android:scaleType="fitCenter"
            android:src="@drawable/coinbase_logo" />

        <TextView
            android:id="@+id/tv_coinbase_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_coinbase_info"
            style="@style/llsdk_main_item_light"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/add_custodian_coinbase_account" />

        <TextView
            android:id="@+id/tv_coinbase_info"
            style="@style/llsdk_main_item_small"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/add_custodian_coinbase_account_description" />

        <TextView
            android:id="@+id/tv_submit_bttn"
            style="?attr/llsdk_bigButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_custodian_coinbase_account_button_submit" />
    </RelativeLayout>
    <include layout="@layout/include_rl_loading" />
</com.shiftpayments.link.sdk.ui.views.custodianselector.AddCustodianListView>
